--- a/package.json
+++ b/package.json
@@ -18,26 +18,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.1",
-    "@angular/cdk": "^10.2.3",
+    "@angular/cdk": "^10.2.1",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.1.1",
-    "@angular/material": "^10.2.3",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
+    "@nebular/eva-icons": "6.2.0",
+    "@nebular/theme": "^6.2.0",
+    "eva-icons": "^1.1.2",
+    "firebase": "^7.21.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "@angular-devkit/build-angular": "~0.1001.1",
     "@angular/cli": "~10.1.1",
     "@angular/compiler-cli": "~10.1.1",
+    "@schematics/angular": "~10.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -69,6 +72,10 @@
     }
   },
   "lint-staged": {
-    "*.{js,css,md,scss}": "prettier --write"
+    "*.ts": [
+      "tslint --fix",
+      "prettier --write"
+    ],
+    "*.{html,scss,json,md}": "prettier --write"
   }
 }
